<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:id="@+id/root">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/linearLayout1">
		<TextView android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:text="@string/dashboardText"
			android:gravity="center" android:id="@+id/textView1" android:padding="10dip"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:layout_weight="1"
		android:orientation="vertical" android:padding="6dip" android:id="@+id/linearLayout2">
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:orientation="horizontal"
			android:id="@+id/linearLayout3">
			<Button android:id="@+id/button1" android:layout_width="wrap_content"
				android:layout_height="wrap_content" style="@style/HomeButton"
				android:text="@string/process_report" android:drawableTop="@drawable/home_button1"
				android:onClick="OnClick"></Button>
			<Button android:id="@+id/button2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/jms_report"
				style="@style/HomeButton" android:drawableTop="@drawable/home_button2"
				android:onClick="OnClick"></Button>
		</LinearLayout>
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:orientation="horizontal"
			android:id="@+id/linearLayout4" android:paddingTop="10dip">
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" style="@style/HomeButton"
				android:id="@+id/button3" android:text="@string/hospital_report"
				android:drawableTop="@drawable/home_button3" android:onClick="OnClick"></Button>
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" style="@style/HomeButton"
				android:id="@+id/button4" android:text="@string/notes"
				android:drawableTop="@drawable/home_button4"></Button>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="match_parent">
	<ProgressBar android:id="@+id/progressBar1"
		style="?android:attr/progressBarStyleHorizontal" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:indeterminate="false"
		android:max="10" android:padding="4dip"></ProgressBar>
	<!-- <Button android:text="Start Progress" android:onClick="startProgress"
		android:id="@+id/button1" android:layout_width="wrap_content"
		android:layout_height="wrap_content"></Button> -->
    </LinearLayout>
</LinearLayout>
